--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@types/react": "~18.2.79",
+    "date-fns": "^4.1.0",
     "expo": "~51.0.28",
+    "expo-camera": "^15.0.16",
     "expo-crypto": "~13.0.2",
+    "expo-image-manipulator": "~12.0.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-safe-area-context": "4.10.5",
-    "expo-camera": "~15.0.16",
-    "expo-image-manipulator": "~12.0.5"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
