Refactor AddIdeaScreen with improved camera functionality
- Update to use expo-camera's CameraView component
- Implement camera permission handling with useCameraPermissions hook
- Add camera flip functionality to switch between front and back cameras
- Reorganize UI layout for better user experience
- Maintain aspect ratio (2:3) for captured images
- Resize images to 60% of screen width while preserving aspect ratio
- Improve error handling and user feedback with modal messages
- Ensure proper navigation flow with personId being passed through routes
- Implement KeyboardAvoidingView for better input handling on various devices
- Update styling to match new layout and improve visual consistency
- Refactor state management for camera type and image capture
- Maintain idea text input and save/cancel functionality
- Ensure compatibility with latest expo-camera API
- Update app.json to include necessary camera permissions

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/react": "~18.2.79",
     "date-fns": "^4.1.0",
     "expo": "~51.0.28",
-    "expo-camera": "^15.0.16",
+    "expo-camera": "~15.0.16",
     "expo-crypto": "~13.0.2",
     "expo-image-manipulator": "~12.0.5",
     "expo-status-bar": "~1.12.1",
