--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native": "0.74.5",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-safe-area-context": "4.10.5",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "react-native-gesture-handler": "~2.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
